<resources>
    <!--COMMON-->
    <string name="app_name">Motohelper</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_text">Add</string>

    <!--LOGIN SCREEN-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="check_save_login_data">Remember me</string>
    <string name="action_register">Register</string>
    <string name="registration">Registration</string>
    <string name="login_failed">"Login failed"</string>
    <string name="permission_request_dialog_message_text">We really need these permissions</string>
    <string name="permission_request_dialog_positive_button_text">Go to settings</string>
    <string name="permission_request_dialog_negative_button_text">No, close application</string>

    <!--REGISTER SCREEN-->
    <string name="enter_email">enter email</string>
    <string name="enter_username">enter user name</string>
    <string name="enter_phone">enter phone</string>
    <string name="enter_password">enter password</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="enter_full_name">enter your name</string>
    <string name="enter_birth_date">enter your birth date</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_dialog_message">Congratulations!\n You are successfully registered.\n Please sign in into application with provided credentials</string>
    <string name="passwords_are_not_equals">You have provided different passwords</string>
    <string name="title_activity_main_map">MainMapActivity</string>


    <!-- MAIN MAP SCREEN MENU   -->
    <string name="map_and_markers">Map and markers</string>
    <string name="settings">Settings</string>
    <string name="filter_settings">Filter settings</string>
    <string name="social_networks">Social networks</string>
    <string name="vk">VK</string>
    <string name="youtube">YouTUBE</string>
    <string name="actions">Actions</string>
    <string name="action_refresh">Refresh</string>
    <string name="accept">Accept</string>

    <!--MAP-->
    <string name="api_map_key">AIzaSyBf9S6exX8Skd1XPbtIKXaVH5vX-u-QFss</string>

    <!--GARAGE FLOW-->
    <string name="my_garage">Garage</string>
    <string name="enter_vehicle_name">Enter name</string>
    <string name="enter_vehicle_mileage">Enter mileage</string>
    <string name="vehicle_type">Select type</string>
    <string name="vehicle_type_button_description">Select type of your vehicle</string>
    <string name="add_vehicle_title">Add vehicle</string>
    <string name="atv">ATV</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="title_activity_garage_flow_main">Garage</string>
</resources>